added a nav bar

--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>snapx</title>
+     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+     <!-- header section start form here -->
+     <header>
+          <div class="nav-container">
+               <div class="logo">
+                    <h2 class="logo-title">snapx</h2>
+                    <p class="primary-shadow-text">Photography contest</p>
+               </div>
+               <nav>
+                    <ul>
+                         <li><a href="#">home</a></li>
+                         <li><a href="#">Photo And Video</a></li>
+                         <li><a href="#">Categories</a></li>
+                         <li><a href="#">Users</a></li>
+                    </ul>
+               </nav>
+               <button class="primary-btn">Sign in/up</button>
+          </div>
+
+     </header>
+     <!-- header section end form here -->
+
+     <!-- main section start form here -->
+     <main>
+          <section></section>
+     </main>
+     <!-- main section end form here -->
+
+     <!-- footer section start form here -->
+     <footer>
+
+     </footer>
+     <!-- footer section end form here -->
      
 </body>
 </html>
