--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <header>
           <div class="nav-container">
                <div class="logo">
-                    <h2 class="logo-title">snapx</h2>
+                    <h2 class="logo-title">snap<span>X</span></h2>
                     <p class="primary-shadow-text">Photography contest</p>
                </div>
                <nav>
@@ -25,12 +25,31 @@
                <button class="primary-btn">Sign in/up</button>
           </div>
 
+           <div class="main-header">
+               <div class="header-banner-container">
+                    <div class="text-content">
+                         <h2 class="name-title">Enter a world of <span>Photos</span> & Amazing <br>
+                              <span>Awards</span></h2>
+                         <p class="primary-description">SnapX Photography is a professional website template with 5 different HTML pages for maximum customizations. It is free for commercial
+                              <br>
+                               usage. This Bootstrap v5.1.3 CSS layout is provided by TemplateMo Free CSS Templates.</p>
+                         <div class="button-area">
+                              <button class="header-btn">Explore SnapX Contest</button>
+                              <a href="#">Watch Our Video Now</a>
+                         </div>
+                    </div>
+               </div>
+           </div>
      </header>
      <!-- header section end form here -->
 
      <!-- main section start form here -->
      <main>
-          <section></section>
+          <section class="card-bc">
+               <div class="card-container">
+
+               </div>
+          </section>
      </main>
      <!-- main section end form here -->
 
