complet responsive for mobile or tab de

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>snapx</title>
      <link rel="stylesheet" href="style/style.css">
+     <link rel="stylesheet" href="responsiv/responsine.css">
 </head>
 <body>
      <!-- header section start form here -->
