added a card sectin or image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,52 @@
      <main>
           <section class="card-bc">
                <div class="card-container">
-
+                    <div class="card">
+                         <img src="images/waiting-01.jpg" alt="">
+                         <div class="card-content">
+                              <h1 class="card-title">Stay in the natur 
+                                   <span><img src="images/rating.png" alt=""></span> 
+                                   <span><img src="images/rating.png" alt=""></span>
+                                  <span><img src="images/rating.png" alt=""></span>
+                              </h1>
+                              <p class="rating">contest winner:</p>
+                              <p class="primary-title">
+                                   contest Author:
+                              </p>
+                              <p class="award">contest aWard:</p>
+                         </div>
+                    </div>
+                    <div class="card">
+                         <img src="images/waiting-01.jpg" alt="">
+                         <div class="card-content">
+                              <h1 class="card-title">Stay in the natur 
+                                   <span><img src="images/rating.png" alt=""></span> 
+                                   <span><img src="images/rating.png" alt=""></span>
+                                  <span><img src="images/rating.png" alt=""></span>
+                              </h1>
+                              <p class="rating">contest winner:</p>
+                              <p class="primary-title">
+                                   contest Author:
+                              </p>
+                              <p class="award">contest aWard:</p>
+                         </div>
+                    </div>
+                    <div class="card">
+                         <img src="images/waiting-01.jpg" alt="">
+                         <div class="card-content">
+                              <h1 class="card-title">Stay in the natur 
+                                   <span><img src="images/rating.png" alt=""></span> 
+                                   <span><img src="images/rating.png" alt=""></span>
+                                  <span><img src="images/rating.png" alt=""></span>
+                              </h1>
+                              <p class="rating">contest winner:</p>
+                              <p class="primary-title">
+                                   contest Author:
+                              </p>
+                              <p class="award">contest aWard:</p>
+                         </div>
+                    </div>
+                    
                </div>
           </section>
      </main>
